--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,5 @@ dependencies {
     implementation 'com.h2database:h2:1.4.199'
     implementation 'org.hibernate:hibernate-core:5.4.2.Final'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.12.3'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
 }
